--- a/bilibili-lite/src/account/base.styl
+++ b/bilibili-lite/src/account/base.styl
@@ -32,6 +32,7 @@
 .img-clip-wrap .first-change-lb
 .coupon-content
 .finish-status .finish-box .box-content
+.pendant-vip-box .pendant-list li:hover>div
   background-color var(--c-hover) !important
 
 .border-line
@@ -46,6 +47,8 @@
 .security_content
 .coin-inner
 .indentify-page
+.pendant-vip-box .pendant-list li
+.pendant-vip-box .pendant-list li:hover
   background-color transparent !important
 
 .home-top-level-upgo
@@ -155,6 +158,7 @@ li.security-list:hover span
 .active .tabs-normal-txt
 .tabs-nav .active
 .title-right-link:hover
+.face-nav>.active
   border-color var(--c-accent) !important
 
 .h-list-item
@@ -162,13 +166,20 @@ li.security-list:hover span
 .big-more-tool-btn
 .indentify-page
 .identify-component .identify-head
+.pendant-list li>div
   border 0 !important
+
+.pendant-list li:hover>div
+  box-shadow none !important
 
 .coupon-wrapper
   background-image none
 
 .security-nav-name
   margin 0 !important
+
+.security_content
+  margin-bottom 0
 
 .finish-status
   width auto
