--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -110,6 +110,7 @@ button
 .qa-area-ol-wrp .qa-area-ol-btn
 .btn-default
 .h .h-follow
+.pendant-list li .pendant-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
