--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -36,6 +36,7 @@
 .imagesbox .boost-control li:hover i
 .clock-time
 .user-name.big-vip a
+.expand-btn
   color var(--c-accent) !important
 
 .clock-time::after
