--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -43,6 +43,7 @@
   color var(--c-text) !important
 
 .be-tab-item.is-active span
+.list-create:hover .text
   color var(--c-accent) !important
 
 .h #h-name
@@ -107,6 +108,7 @@ input[type=text]:focus
 
 .be-tab-cursor
 .sub-tabs a.active
+.list-create:hover
   border-color var(--c-accent)
 
 .h .h-gradient
