--- a/bilibili-lite/src/game/base.styl
+++ b/bilibili-lite/src/game/base.styl
@@ -3,7 +3,7 @@ footer
 .footer-public
 .bui-sns-info
 .g-title .btn .ic-gift
-  display none
+  display none !important
 
 .banner
 .listing-ul li
@@ -76,6 +76,11 @@ a.listing-btn:hover
 .listing-ul li
 .pop-nav
   box-shadow none
+
+#page .game .game-box
+  border-radius 4px
+  background-color var(--c-background)
+  overflow hidden
 
 /* banner */
 .banner .slides-pagination
