--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -50,14 +50,17 @@
 .recharge-stores-ctnr .tab-box
 .sub-tab-box .item.active
 .draw-full-cntr .function-bar
+.pay-note-panel
 	background-color var(--c-hover) !important
 
 .bili-share-pc .weixin-hover .qr-before
-	background-color: transparent !important
+	background-color transparent !important
 
 .draw-full-cntr .function-bar.draw
 .tab-candidate>span:after
 .tabs .item>span:after
+.shortcuts-ctnr .shortcut-item .hinter
+.shortcuts-ctnr .shortcut-item .num-hinter
 	background-color var(--c-accent) !important
 
 .room-bg::after
