--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -211,7 +211,8 @@ input[type=text]:focus
 .small-item img
 #page-index .fav-covers
 #page-index .fav-covers img
-  width 100%
+#page-index .channel .content
+  width 100% !important
   height auto
 
 .mini-item
