--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -5,7 +5,7 @@
 .topic-title .b-topic-i
 .activity.topic-preview-wrapper .page_prev
 .activity.topic-preview-wrapper .page_next
-#socialRecruit .side_main .shadow
+.side_main .shadow
 .fixed-service-bg
   display none !important
 
@@ -19,9 +19,10 @@
 .help-content img
 .collapse-item--active
 .collapse-item:hover
-#socialRecruit .catalog_bg
-#socialRecruit .side_main
-#socialRecruit .side_main .select .block.active
+.catalog_bg
+.side_main
+.side_main .select .block.active
+.list_block:hover
   background-color var(--c-hover) !important
 
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
@@ -33,17 +34,20 @@
 .activity-playlist .activity-playlist-item
 .help-body p
 .mCSB_scrollTools .mCSB_draggerRail
-#socialRecruit .master_list
+.master_list
   background-color transparent !important
 
 .helper-icon-dots
-#socialRecruit .jobs-icon-blue-dots
+.jobs-icon-blue-dots
   background-color var(--c-accent) !important
 
 .active-title .b-active-t
 .pagelist .flip-left .ellipsis
-#socialRecruit .master_title .big_title
-#socialRecruit .jobs_list_title div
+.master_title .big_title
+.jobs_list_title div
+.Jname
+.jobs_numb
+.select .block
   color var(--c-title) !important
 
 .act-list ul li .event_status
@@ -52,21 +56,25 @@
 
 .nav-tab .on
 .collapse-item--active .collapse-title
-#socialRecruit .side_main .select .block.active
+.side_main .select .block.active
 .nav-tab li:hover
+.list_block:hover .jobs_name
+.list_block:hover .jobs_classification
+.list_block:hover .jobs_location
+.select .block:hover
   color var(--c-accent) !important
 
 .bili-share-pc
 .bili-share-pc .vertical-line
-#socialRecruit .jobs_numb
-#socialRecruit .list_block:hover
+.jobs_numb
+.list_block:hover
 #uplist .up-card
   border-color var(--c-border) !important
 
-#socialRecruit .side_main .select .block.active
+.side_main .select .block.active
   border-color var(--c-accent) !important
 
-#socialRecruit .list_block
+.list_block
   border-top-color var(--c-border) !important
 
 .help-list
