--- a/bilibili-lite/src/v/index.styl
+++ b/bilibili-lite/src/v/index.styl
@@ -21,7 +21,8 @@ url-prefix("https://www.bilibili.com/list/") {
 @-moz-document url-prefix("https://www.bilibili.com/v/cheese/") {
 	@import 'cheese'
 }
-@-moz-document url-prefix("https://www.bilibili.com/blackboard/") {
+@-moz-document url-prefix("https://www.bilibili.com/blackboard/"),
+url-prefix("https://www.bilibili.com/html/join-list.html") {
 	@import 'blackboard'
 }
 @-moz-document url-prefix("https://www.bilibili.com/anime/timeline/"),
