--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -3893,14 +3893,14 @@
     margin-top: 100px;
   }
 }
-@-moz-document url-prefix("https://www.bilibili.com/blackboard/") {
+@-moz-document url-prefix("https://www.bilibili.com/blackboard/"), url-prefix("https://www.bilibili.com/html/join-list.html") {
   .activity-main .banner,
   .international-footer,
   .active-title .b-active-i,
   .topic-title .b-topic-i,
   .activity.topic-preview-wrapper .page_prev,
   .activity.topic-preview-wrapper .page_next,
-  #socialRecruit .side_main .shadow,
+  .side_main .shadow,
   .fixed-service-bg {
     display: none !important;
   }
@@ -3914,9 +3914,10 @@
   .help-content img,
   .collapse-item--active,
   .collapse-item:hover,
-  #socialRecruit .catalog_bg,
-  #socialRecruit .side_main,
-  #socialRecruit .side_main .select .block.active {
+  .catalog_bg,
+  .side_main,
+  .side_main .select .block.active,
+  .list_block:hover {
     background-color: var(--c-hover) !important;
   }
   .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar,
@@ -3928,17 +3929,20 @@
   .activity-playlist .activity-playlist-item,
   .help-body p,
   .mCSB_scrollTools .mCSB_draggerRail,
-  #socialRecruit .master_list {
+  .master_list {
     background-color: transparent !important;
   }
   .helper-icon-dots,
-  #socialRecruit .jobs-icon-blue-dots {
+  .jobs-icon-blue-dots {
     background-color: var(--c-accent) !important;
   }
   .active-title .b-active-t,
   .pagelist .flip-left .ellipsis,
-  #socialRecruit .master_title .big_title,
-  #socialRecruit .jobs_list_title div {
+  .master_title .big_title,
+  .jobs_list_title div,
+  .Jname,
+  .jobs_numb,
+  .select .block {
     color: var(--c-title) !important;
   }
   .act-list ul li .event_status,
@@ -3947,21 +3951,25 @@
   }
   .nav-tab .on,
   .collapse-item--active .collapse-title,
-  #socialRecruit .side_main .select .block.active,
-  .nav-tab li:hover {
+  .side_main .select .block.active,
+  .nav-tab li:hover,
+  .list_block:hover .jobs_name,
+  .list_block:hover .jobs_classification,
+  .list_block:hover .jobs_location,
+  .select .block:hover {
     color: var(--c-accent) !important;
   }
   .bili-share-pc,
   .bili-share-pc .vertical-line,
-  #socialRecruit .jobs_numb,
-  #socialRecruit .list_block:hover,
+  .jobs_numb,
+  .list_block:hover,
   #uplist .up-card {
     border-color: var(--c-border) !important;
   }
-  #socialRecruit .side_main .select .block.active {
+  .side_main .select .block.active {
     border-color: var(--c-accent) !important;
   }
-  #socialRecruit .list_block {
+  .list_block {
     border-top-color: var(--c-border) !important;
   }
   .help-list,
@@ -4903,8 +4911,9 @@
   .small-item .cover,
   .small-item img,
   #page-index .fav-covers,
-  #page-index .fav-covers img {
-    width: 100%;
+  #page-index .fav-covers img,
+  #page-index .channel .content {
+    width: 100% !important;
     height: auto;
   }
   .mini-item {
@@ -6004,7 +6013,8 @@
   .fans-medal-item .level,
   .recharge-stores-ctnr .tab-box,
   .sub-tab-box .item.active,
-  .draw-full-cntr .function-bar {
+  .draw-full-cntr .function-bar,
+  .pay-note-panel {
     background-color: var(--c-hover) !important;
   }
   .bili-share-pc .weixin-hover .qr-before {
@@ -6012,7 +6022,9 @@
   }
   .draw-full-cntr .function-bar.draw,
   .tab-candidate>span:after,
-  .tabs .item>span:after {
+  .tabs .item>span:after,
+  .shortcuts-ctnr .shortcut-item .hinter,
+  .shortcuts-ctnr .shortcut-item .num-hinter {
     background-color: var(--c-accent) !important;
   }
   .room-bg::after {
@@ -9267,7 +9279,7 @@
   .footer-public,
   .bui-sns-info,
   .g-title .btn .ic-gift {
-    display: none;
+    display: none !important;
   }
   .banner,
   .listing-ul li,
@@ -9340,6 +9352,11 @@
   .listing-ul li,
   .pop-nav {
     box-shadow: none;
+  }
+  #page .game .game-box {
+    border-radius: 4px;
+    background-color: var(--c-background);
+    overflow: hidden;
   }
   .banner .slides-pagination {
     bottom: -1px;
