--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -42,6 +42,8 @@
 .draw-full-cntr
 #webShare .bili-share-pc
 .bili-share-pc .share-weixin-qr
+.help-cntr
+.live-record-list-cntr
 	background-color var(--c-background) !important
 
 .attention-btn-ctnr .right-part
@@ -54,6 +56,8 @@
 	background-color var(--c-hover) !important
 
 .bili-share-pc .weixin-hover .qr-before
+.live-record-card-cntr
+.week-rank-iframe
 	background-color transparent !important
 
 .draw-full-cntr .function-bar.draw
@@ -96,6 +100,9 @@
 .room-introduction-tags .room-introduction-tag:hover .icon-label
 .chaos-pk-rank .link-to-history
 .guard-rank-cntr .rank-cntr .rank-list-box .online a.live-skin-main-a-text
+.mailbox-cntr header
+.tabs .item.active span
+.tabs .item:hover span
 	color var(--c-accent) !important
 
 .room-introduction-tags
@@ -107,11 +114,13 @@
 	border-color var(--c-border) !important
 
 .recharge-store-box ul.select-list .item.active
+.award-list-cntr .award-list-cntr .award-list .award-item img
 	border-color var(--c-accent) !important
 
 .content-wrapper
 .user-protocol
 .draw-full-cntr
+.live-record-list-cntr
 	border 0 !important
 
 .common-popup-wrap.arrow-top::before
@@ -143,7 +152,7 @@
 	margin 0
 
 .live-room-app .app-content .app-body .section-block
-	margin-bottom 100px
+	margin-bottom 140px
 
 .user-panel-ctnr .user-panel .content-ctnr .ctrl-btn:nth-child(2n)
 	padding-left 40px !important
