--- a/bilibili-lite/src/space/video.styl
+++ b/bilibili-lite/src/space/video.styl
@@ -10,6 +10,7 @@
 #page-fav .fav-sidenav .fav-item:hover
 #page-fav .fav-main .filter-item .filter-type .be-dropdown-item:hover
 #page-follows .follow-main .follow-action-bottom .follow-action-fixtop
+.album-content .my-album .tab-list
   background-color var(--c-hover)
 
 #page-channel-index .no-channel-container em
@@ -30,6 +31,7 @@
 #page-video #submit-video-type-filter a.active
 .sub-tabs a.active
 #page-channel-index .no-channel-container em
+.my-album .tab-list .tab.active .name
   color var(--c-accent) !important
 
 .be-pager-item-active a
