--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -69,6 +69,7 @@ em:not(.icon)
 .live-container .status
 .video-card-common .title .live
 .info-item .notice-icon
+.live-record-card-cntr .cover .corner.new
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
